--- a/php2.yaml
+++ b/php2.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,6 +16,6 @@ spec:
     spec:
       containers:
       - name: php
-        image: hubtestedu/fortest:phpapp
+        image: httpd:latest
         ports:
-        - containerPort: {{ .Values.port }}
+        - containerPort: 80
